# printke-web

./: .env.example  .gitignore  DELIVERY_API_REFERENCE.html  DELIVERY_TRACKING_IMPLEMENTATION.html  Dockerfile  Makefile  PROJECT-SUMMARY.html  app.py  docker-compose.yml  infra-docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_delivery_tracking.py  test_flow.py  test_websocket.py
config/: __init__.py  settings.py
e2e/: .gitignore  package.json  playwright.config.ts
e2e/tests/: printke.spec.ts
k8s/base/: admin.yaml  api.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres-init.yaml  postgres.yaml  redis.yaml  secrets.yaml
src/: database.py
src/api/: __init__.py  admin.py  drivers.py  orders.py  payments.py  websockets.py
src/core/: __init__.py  config.py  security.py
src/models/: __init__.py
src/schemas/: __init__.py  admin.py  common.py  delivery.py  orders.py  payments.py
src/services/: __init__.py  card_processor.py  mpesa.py
src/utils/: __init__.py  validators.py
static/css/: main.css
tasks/: ARCHITECTURE.md  DOCUMENTATION.html
tasks/dev-manager/infrastructure/: ARCHITECTURE.html
tasks/dev-manager/platform-docs/: QUICK-START.html  README.html
templates/: base.html
templates/admin/: base.html  dashboard.html  order_detail.html  orders.html
templates/customer/: about.html  contact.html  index.html  order.html  order_status.html  payment.html  pricing.html  templates.html  tracking.html
templates/errors/: 404.html  500.html
